[gd_scene load_steps=8 format=4 uid="uid://cqe4raotd2rg7"]

[ext_resource type="Script" uid="uid://xde1n4j32186" path="res://scenes/terrain/terrain.gd" id="1_5ibnn"]
[ext_resource type="Texture2D" uid="uid://ca2ddd3k8n072" path="res://scenes/terrain/world_tileset.png" id="1_hn2sr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hn2sr"]
texture = ExtResource("1_hn2sr")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_5ibnn"]
sources/0 = SubResource("TileSetAtlasSource_hn2sr")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5ibnn"]
texture = ExtResource("1_hn2sr")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0

[sub_resource type="TileSet" id="TileSet_mmmjq"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_5ibnn")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ibnn"]
size = Vector2(112, 144)

[node name="Terrain" type="Node2D"]
script = ExtResource("1_5ibnn")

[node name="Parallax2DB" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 176)
autoscroll = Vector2(-25, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="Parallax2DB"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAkAAAAAAAEAAAAAAAkAAAAAAAIAAAAAAAoAAAAAAAMAAAAAAAsAAAAAAAQAAAAAAAsAAAAAAAUAAAAAAAwAAAAAAAYAAAAAAA0AAAAAAAcAAAAAAA0AAAAAAAgAAAAAAA4AAAAAAAkAAAAAAA8AAAAAAAoAAAAAAA8AAAABAAkAAAAAAA8AAAABAAoAAAAAAA8AAAACAAkAAAAAAA8AAAACAAoAAAAAAA8AAAADAAkAAAAAAA8AAAADAAoAAAAAAA8AAAAEAAkAAAAAAA8AAAAEAAoAAAAAAA8AAAAFAAkAAAAAAA8AAAAFAAoAAAAAAA8AAAAGAAkAAAAAAA8AAAAGAAoAAAAAAA8AAAAHAAkAAAAAAA8AAAAHAAoAAAAAAA8AAAAIAAkAAAAAAA8AAAAIAAoAAAAAAA8AAAAJAAkAAAAAAA8AAAAJAAoAAAAAAA8AAAAKAAkAAAAAAA8AAAAKAAoAAAAAAA8AAAALAAkAAAAAAA8AAAALAAoAAAAAAA8AAAAMAAkAAAAAAA8AAAAMAAoAAAAAAA8AAAANAAkAAAAAAA8AAAANAAoAAAAAAA8AAAAOAAkAAAAAAA8AAAAOAAoAAAAAAA8AAAAPAAkAAAAAAA8AAAAPAAoAAAAAAA8AAAAQAAkAAAAAAA8AAAAQAAoAAAAAAA8AAAARAAkAAAAAAA8AAAARAAoAAAAAAA8AAAASAAkAAAAAAA8AAAASAAoAAAAAAA8AAAATAAkAAAAAAA8AAAATAAoAAAAAAA8AAAAUAAkAAAAAAA8AAAAUAAoAAAAAAA8AAAAVAAkAAAAAAA8AAAAVAAoAAAAAAA8AAAAWAAkAAAAAAA8AAAAWAAoAAAAAAA8AAAAXAAkAAAAAAA8AAAAXAAoAAAAAAA8AAAAYAAkAAAAAAA8AAAAYAAoAAAAAAA8AAAAZAAkAAAAAAA8AAAAZAAoAAAAAAA8AAAAaAAkAAAAAAA8AAAAaAAoAAAAAAA8AAAAbAAkAAAAAAA8AAAAbAAoAAAAAAA8AAAAcAAkAAAAAAA8AAAAcAAoAAAAAAA8AAAAdAAkAAAAAAA8AAAAdAAoAAAAAAA8AAAAeAAkAAAAAAA8AAAAeAAoAAAAAAA8AAAAfAAkAAAAAAA8AAAAfAAoAAAAAAA8AAAAgAAkAAAAAAA8AAAAgAAoAAAAAAA8AAAAhAAkAAAAAAA8AAAAhAAoAAAAAAA8AAAAiAAkAAAAAAA8AAAAiAAoAAAAAAA8AAAAjAAkAAAAAAA8AAAAjAAoAAAAAAA8AAAAkAAkAAAAAAA8AAAAkAAoAAAAAAA8AAAAlAAkAAAAAAA8AAAAlAAoAAAAAAA8AAAAmAAkAAAAAAA8AAAAmAAoAAAAAAA8AAAAnAAkAAAAAAA8AAAAnAAoAAAAAAA8AAAABAAAAAAAAAAkAAAABAAEAAAAAAAkAAAABAAIAAAAAAAoAAAABAAMAAAAAAAsAAAABAAQAAAAAAAsAAAABAAUAAAAAAAwAAAABAAYAAAAAAA0AAAABAAcAAAAAAA0AAAABAAgAAAAAAA4AAAACAAAAAAAAAAkAAAACAAEAAAAAAAkAAAACAAIAAAAAAAoAAAACAAMAAAAAAAsAAAACAAQAAAAAAAsAAAACAAUAAAAAAAwAAAACAAYAAAAAAA0AAAACAAcAAAAAAA0AAAACAAgAAAAAAA4AAAADAAAAAAAAAAkAAAADAAEAAAAAAAkAAAADAAIAAAAAAAoAAAADAAMAAAAAAAsAAAADAAQAAAAAAAsAAAADAAUAAAAAAAwAAAADAAYAAAAAAA0AAAADAAcAAAAAAA0AAAADAAgAAAAAAA4AAAAEAAAAAAAAAAkAAAAEAAEAAAAAAAkAAAAEAAIAAAAAAAoAAAAEAAMAAAAAAAsAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAwAAAAEAAYAAAAAAA0AAAAEAAcAAAAAAA0AAAAEAAgAAAAAAA4AAAAFAAAAAAAAAAkAAAAFAAEAAAAAAAkAAAAFAAIAAAAAAAoAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAwAAAAFAAYAAAAAAA0AAAAFAAcAAAAAAA0AAAAFAAgAAAAAAA4AAAAGAAAAAAAAAAkAAAAGAAEAAAAAAAkAAAAGAAIAAAAAAAoAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAwAAAAGAAYAAAAAAA0AAAAGAAcAAAAAAA0AAAAGAAgAAAAAAA4AAAAHAAAAAAAAAAkAAAAHAAEAAAAAAAkAAAAHAAIAAAAAAAoAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAHAAUAAAAAAAwAAAAHAAYAAAAAAA0AAAAHAAcAAAAAAA0AAAAHAAgAAAAAAA4AAAAIAAAAAAAAAAkAAAAIAAEAAAAAAAkAAAAIAAIAAAAAAAoAAAAIAAMAAAAAAAsAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAwAAAAIAAYAAAAAAA0AAAAIAAcAAAAAAA0AAAAIAAgAAAAAAA4AAAAJAAAAAAAAAAkAAAAJAAEAAAAAAAkAAAAJAAIAAAAAAAoAAAAJAAMAAAAAAAsAAAAJAAQAAAAAAAsAAAAJAAUAAAAAAAwAAAAJAAYAAAAAAA0AAAAJAAcAAAAAAA0AAAAJAAgAAAAAAA4AAAAKAAAAAAAAAAkAAAAKAAEAAAAAAAkAAAAKAAIAAAAAAAoAAAAKAAMAAAAAAAsAAAAKAAQAAAAAAAsAAAAKAAUAAAAAAAwAAAAKAAYAAAAAAA0AAAAKAAcAAAAAAA0AAAAKAAgAAAAAAA4AAAALAAAAAAAAAAkAAAALAAEAAAAAAAkAAAALAAIAAAAAAAoAAAALAAMAAAAAAAsAAAALAAQAAAAAAAsAAAALAAUAAAAAAAwAAAALAAYAAAAAAA0AAAALAAcAAAAAAA0AAAALAAgAAAAAAA4AAAAMAAAAAAAAAAkAAAAMAAEAAAAAAAkAAAAMAAIAAAAAAAoAAAAMAAMAAAAAAAsAAAAMAAQAAAAAAAsAAAAMAAUAAAAAAAwAAAAMAAYAAAAAAA0AAAAMAAcAAAAAAA0AAAAMAAgAAAAAAA4AAAANAAAAAAAAAAkAAAANAAEAAAAAAAkAAAANAAIAAAAAAAoAAAANAAMAAAAAAAsAAAANAAQAAAAAAAsAAAANAAUAAAAAAAwAAAANAAYAAAAAAA0AAAANAAcAAAAAAA0AAAANAAgAAAAAAA4AAAAOAAAAAAAAAAkAAAAOAAEAAAAAAAkAAAAOAAIAAAAAAAoAAAAOAAMAAAAAAAsAAAAOAAQAAAAAAAsAAAAOAAUAAAAAAAwAAAAOAAYAAAAAAA0AAAAOAAcAAAAAAA0AAAAOAAgAAAAAAA4AAAAPAAAAAAAAAAkAAAAPAAEAAAAAAAkAAAAPAAIAAAAAAAoAAAAPAAMAAAAAAAsAAAAPAAQAAAAAAAsAAAAPAAUAAAAAAAwAAAAPAAYAAAAAAA0AAAAPAAcAAAAAAA0AAAAPAAgAAAAAAA4AAAAQAAAAAAAAAAkAAAAQAAEAAAAAAAkAAAAQAAIAAAAAAAoAAAAQAAMAAAAAAAsAAAAQAAQAAAAAAAsAAAAQAAUAAAAAAAwAAAAQAAYAAAAAAA0AAAAQAAcAAAAAAA0AAAAQAAgAAAAAAA4AAAARAAAAAAAAAAkAAAARAAEAAAAAAAkAAAARAAIAAAAAAAoAAAARAAMAAAAAAAsAAAARAAQAAAAAAAsAAAARAAUAAAAAAAwAAAARAAYAAAAAAA0AAAARAAcAAAAAAA0AAAARAAgAAAAAAA4AAAASAAAAAAAAAAkAAAASAAEAAAAAAAkAAAASAAIAAAAAAAoAAAASAAMAAAAAAAsAAAASAAQAAAAAAAsAAAASAAUAAAAAAAwAAAASAAYAAAAAAA0AAAASAAcAAAAAAA0AAAASAAgAAAAAAA4AAAATAAAAAAAAAAkAAAATAAEAAAAAAAkAAAATAAIAAAAAAAoAAAATAAMAAAAAAAsAAAATAAQAAAAAAAsAAAATAAUAAAAAAAwAAAATAAYAAAAAAA0AAAATAAcAAAAAAA0AAAATAAgAAAAAAA4AAAAUAAAAAAAAAAkAAAAUAAEAAAAAAAkAAAAUAAIAAAAAAAoAAAAUAAMAAAAAAAsAAAAUAAQAAAAAAAsAAAAUAAUAAAAAAAwAAAAUAAYAAAAAAA0AAAAUAAcAAAAAAA0AAAAUAAgAAAAAAA4AAAAVAAAAAAAAAAkAAAAVAAEAAAAAAAkAAAAVAAIAAAAAAAoAAAAVAAMAAAAAAAsAAAAVAAQAAAAAAAsAAAAVAAUAAAAAAAwAAAAVAAYAAAAAAA0AAAAVAAcAAAAAAA0AAAAVAAgAAAAAAA4AAAAWAAAAAAAAAAkAAAAWAAEAAAAAAAkAAAAWAAIAAAAAAAoAAAAWAAMAAAAAAAsAAAAWAAQAAAAAAAsAAAAWAAUAAAAAAAwAAAAWAAYAAAAAAA0AAAAWAAcAAAAAAA0AAAAWAAgAAAAAAA4AAAAXAAAAAAAAAAkAAAAXAAEAAAAAAAkAAAAXAAIAAAAAAAoAAAAXAAMAAAAAAAsAAAAXAAQAAAAAAAsAAAAXAAUAAAAAAAwAAAAXAAYAAAAAAA0AAAAXAAcAAAAAAA0AAAAXAAgAAAAAAA4AAAAYAAAAAAAAAAkAAAAYAAEAAAAAAAkAAAAYAAIAAAAAAAoAAAAYAAMAAAAAAAsAAAAYAAQAAAAAAAsAAAAYAAUAAAAAAAwAAAAYAAYAAAAAAA0AAAAYAAcAAAAAAA0AAAAYAAgAAAAAAA4AAAAZAAAAAAAAAAkAAAAZAAEAAAAAAAkAAAAZAAIAAAAAAAoAAAAZAAMAAAAAAAsAAAAZAAQAAAAAAAsAAAAZAAUAAAAAAAwAAAAZAAYAAAAAAA0AAAAZAAcAAAAAAA0AAAAZAAgAAAAAAA4AAAAaAAAAAAAAAAkAAAAaAAEAAAAAAAkAAAAaAAIAAAAAAAoAAAAaAAMAAAAAAAsAAAAaAAQAAAAAAAsAAAAaAAUAAAAAAAwAAAAaAAYAAAAAAA0AAAAaAAcAAAAAAA0AAAAaAAgAAAAAAA4AAAAbAAAAAAAAAAkAAAAbAAEAAAAAAAkAAAAbAAIAAAAAAAoAAAAbAAMAAAAAAAsAAAAbAAQAAAAAAAsAAAAbAAUAAAAAAAwAAAAbAAYAAAAAAA0AAAAbAAcAAAAAAA0AAAAbAAgAAAAAAA4AAAAcAAAAAAAAAAkAAAAcAAEAAAAAAAkAAAAcAAIAAAAAAAoAAAAcAAMAAAAAAAsAAAAcAAQAAAAAAAsAAAAcAAUAAAAAAAwAAAAcAAYAAAAAAA0AAAAcAAcAAAAAAA0AAAAcAAgAAAAAAA4AAAAdAAAAAAAAAAkAAAAdAAEAAAAAAAkAAAAdAAIAAAAAAAoAAAAdAAMAAAAAAAsAAAAdAAQAAAAAAAsAAAAdAAUAAAAAAAwAAAAdAAYAAAAAAA0AAAAdAAcAAAAAAA0AAAAdAAgAAAAAAA4AAAAeAAAAAAAAAAkAAAAeAAEAAAAAAAkAAAAeAAIAAAAAAAoAAAAeAAMAAAAAAAsAAAAeAAQAAAAAAAsAAAAeAAUAAAAAAAwAAAAeAAYAAAAAAA0AAAAeAAcAAAAAAA0AAAAeAAgAAAAAAA4AAAAfAAAAAAAAAAkAAAAfAAEAAAAAAAkAAAAfAAIAAAAAAAoAAAAfAAMAAAAAAAsAAAAfAAQAAAAAAAsAAAAfAAUAAAAAAAwAAAAfAAYAAAAAAA0AAAAfAAcAAAAAAA0AAAAfAAgAAAAAAA4AAAAgAAAAAAAAAAkAAAAgAAEAAAAAAAkAAAAgAAIAAAAAAAoAAAAgAAMAAAAAAAsAAAAgAAQAAAAAAAsAAAAgAAUAAAAAAAwAAAAgAAYAAAAAAA0AAAAgAAcAAAAAAA0AAAAgAAgAAAAAAA4AAAAhAAAAAAAAAAkAAAAhAAEAAAAAAAkAAAAhAAIAAAAAAAoAAAAhAAMAAAAAAAsAAAAhAAQAAAAAAAsAAAAhAAUAAAAAAAwAAAAhAAYAAAAAAA0AAAAhAAcAAAAAAA0AAAAhAAgAAAAAAA4AAAAiAAAAAAAAAAkAAAAiAAEAAAAAAAkAAAAiAAIAAAAAAAoAAAAiAAMAAAAAAAsAAAAiAAQAAAAAAAsAAAAiAAUAAAAAAAwAAAAiAAYAAAAAAA0AAAAiAAcAAAAAAA0AAAAiAAgAAAAAAA4AAAAjAAAAAAAAAAkAAAAjAAEAAAAAAAkAAAAjAAIAAAAAAAoAAAAjAAMAAAAAAAsAAAAjAAQAAAAAAAsAAAAjAAUAAAAAAAwAAAAjAAYAAAAAAA0AAAAjAAcAAAAAAA0AAAAjAAgAAAAAAA4AAAAkAAAAAAAAAAkAAAAkAAEAAAAAAAkAAAAkAAIAAAAAAAoAAAAkAAMAAAAAAAsAAAAkAAQAAAAAAAsAAAAkAAUAAAAAAAwAAAAkAAYAAAAAAA0AAAAkAAcAAAAAAA0AAAAkAAgAAAAAAA4AAAAlAAAAAAAAAAkAAAAlAAEAAAAAAAkAAAAlAAIAAAAAAAoAAAAlAAMAAAAAAAsAAAAlAAQAAAAAAAsAAAAlAAUAAAAAAAwAAAAlAAYAAAAAAA0AAAAlAAcAAAAAAA0AAAAlAAgAAAAAAA4AAAAmAAAAAAAAAAkAAAAmAAEAAAAAAAkAAAAmAAIAAAAAAAoAAAAmAAMAAAAAAAsAAAAmAAQAAAAAAAsAAAAmAAUAAAAAAAwAAAAmAAYAAAAAAA0AAAAmAAcAAAAAAA0AAAAmAAgAAAAAAA4AAAAnAAAAAAAAAAkAAAAnAAEAAAAAAAkAAAAnAAIAAAAAAAoAAAAnAAMAAAAAAAsAAAAnAAQAAAAAAAsAAAAnAAUAAAAAAAwAAAAnAAYAAAAAAA0AAAAnAAcAAAAAAA0AAAAnAAgAAAAAAA4AAAA=")
tile_set = SubResource("TileSet_5ibnn")

[node name="Parallax2DF" type="Parallax2D" parent="."]
repeat_size = Vector2(640, 176)
autoscroll = Vector2(-100, 0)

[node name="TileMapLayer" type="TileMapLayer" parent="Parallax2DF"]
tile_map_data = PackedByteArray("AAAAAAkAAAAAAAAAAAABAAkAAAAAAAAAAAACAAkAAAAAAAAAAAADAAkAAAAAAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAGAAkAAAAAAAAAAAAHAAkAAAAAAAAAAAAIAAkAAAAAAAAAAAAJAAkAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAAMAAkAAAAAAAAAAAANAAkAAAAAAAAAAAAOAAkAAAAAAAAAAAAPAAkAAAAAAAAAAAAQAAkAAAAAAAAAAAARAAkAAAAAAAAAAAASAAkAAAAAAAAAAAATAAkAAAAAAAAAAAAUAAkAAAAAAAAAAAAVAAkAAAAAAAAAAAAWAAkAAAAAAAAAAAAXAAkAAAAAAAAAAAAYAAkAAAAAAAAAAAAZAAkAAAAAAAAAAAAaAAkAAAAAAAAAAAAbAAkAAAAAAAAAAAAcAAkAAAAAAAAAAAAdAAkAAAAAAAAAAAAeAAkAAAAAAAAAAAAfAAkAAAAAAAAAAAAgAAkAAAAAAAAAAAAhAAkAAAAAAAAAAAAiAAkAAAAAAAAAAAAjAAkAAAAAAAAAAAAkAAkAAAAAAAAAAAAlAAkAAAAAAAAAAAAmAAkAAAAAAAAAAAAnAAkAAAAAAAAAAAAAAAoAAAAAAAEAAAABAAoAAAAAAAEAAAACAAoAAAAAAAEAAAADAAoAAAAAAAEAAAAEAAoAAAAAAAEAAAAFAAoAAAAAAAEAAAAGAAoAAAAAAAEAAAAHAAoAAAAAAAEAAAAIAAoAAAAAAAEAAAAJAAoAAAAAAAEAAAAKAAoAAAAAAAEAAAALAAoAAAAAAAEAAAAMAAoAAAAAAAEAAAANAAoAAAAAAAEAAAAOAAoAAAAAAAEAAAAPAAoAAAAAAAEAAAAQAAoAAAAAAAEAAAARAAoAAAAAAAEAAAASAAoAAAAAAAEAAAATAAoAAAAAAAEAAAAUAAoAAAAAAAEAAAAVAAoAAAAAAAEAAAAWAAoAAAAAAAEAAAAXAAoAAAAAAAEAAAAYAAoAAAAAAAEAAAAZAAoAAAAAAAEAAAAaAAoAAAAAAAEAAAAbAAoAAAAAAAEAAAAcAAoAAAAAAAEAAAAdAAoAAAAAAAEAAAAeAAoAAAAAAAEAAAAfAAoAAAAAAAEAAAAgAAoAAAAAAAEAAAAhAAoAAAAAAAEAAAAiAAoAAAAAAAEAAAAjAAoAAAAAAAEAAAAkAAoAAAAAAAEAAAAlAAoAAAAAAAEAAAAmAAoAAAAAAAEAAAAnAAoAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_mmmjq")

[node name="ScoreArea2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScoreArea2D"]
position = Vector2(56, 72)
shape = SubResource("RectangleShape2D_5ibnn")
